# AzureOpsCLI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/azure_ops_cli/: cli.py  const.py  transform.py
tests/: test_transform.py
